# rust_opengl

.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: initialize.sh  post-create.sh
002_sdl/src/: main.rs
003_opengl/: Cargo.toml
003_opengl/rsc/shader/: shader.fs  shader.vs
003_opengl/src/: main.rs  shader.rs  vertex.rs
004_imgui/: Cargo.toml
004_imgui/src/: main.rs
005_3d_object/src/: main.rs
006_texture/: Cargo.toml
006_texture/rsc/shader/: shader.fs  shader.vs
006_texture/src/: image_manager.rs  main.rs
007_frame_buffer/src/: frame_buffer.rs  main.rs
